Update bin script and publish to npm

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-norman",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,6 @@
     "sync-directory": "^2.0.0"
   },
   "bin": {
-    "norman": "./index.js"
+    "norman": "./norman.js"
   }
 }
