--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "convert-source-map": "^1.5.1",
     "fs-extra": "^6.0.1",
     "git-url-parse": "^9.0.1",
+    "ignore": "^4.0.2",
     "semver": "^5.5.0"
   },
   "bin": {
