--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-norman",
-  "version": "1.0.12",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/zenwarr/norman.git"
   },
+  "engines": {
+    "npm": ">5.7.1"
+  },
   "author": "zenwarr",
   "license": "MIT",
   "bugs": {
@@ -18,20 +21,35 @@
   },
   "homepage": "https://github.com/zenwarr/norman#readme",
   "devDependencies": {
+    "@types/argparse": "^1.0.34",
     "@types/chalk": "^2.2.0",
     "@types/chokidar": "^1.7.5",
+    "@types/content-type": "^1.1.2",
+    "@types/express": "^4.16.0",
     "@types/fs-extra": "^5.0.4",
+    "@types/ini": "^1.3.29",
     "@types/node": "^10.5.2",
+    "@types/request": "^2.47.1",
+    "@types/request-promise-native": "^1.0.15",
     "@types/semver": "^5.5.0",
+    "@types/superagent": "^3.8.3",
     "typescript": "^2.9.2"
   },
   "dependencies": {
+    "accept": "^3.0.2",
+    "argparse": "^1.0.10",
     "chalk": "^2.4.1",
     "chokidar": "^2.0.4",
+    "content-type": "^1.0.4",
+    "express": "^4.16.3",
     "fs-extra": "^6.0.1",
     "git-url-parse": "^9.0.1",
     "ignore": "^4.0.2",
-    "semver": "^5.5.0"
+    "ini": "^1.3.5",
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5",
+    "semver": "^5.5.0",
+    "superagent": "^3.8.3"
   },
   "bin": {
     "norman": "./norman.js"
