--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "tslint --project tsconfig.json --format verbose"
   },
   "repository": {
     "type": "git",
@@ -28,12 +29,12 @@
     "@types/express": "^4.16.0",
     "@types/fs-extra": "^5.0.4",
     "@types/ini": "^1.3.29",
-    "@types/node": "^10.5.2",
+    "@types/luxon": "^1.2.2",
+    "@types/node": "^10.9.4",
     "@types/request": "^2.47.1",
     "@types/request-promise-native": "^1.0.15",
-    "@types/semver": "^5.5.0",
-    "@types/superagent": "^3.8.3",
-    "typescript": "^2.9.2"
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.3"
   },
   "dependencies": {
     "accept": "^3.0.2",
@@ -42,14 +43,13 @@
     "chokidar": "^2.0.4",
     "content-type": "^1.0.4",
     "express": "^4.16.3",
-    "fs-extra": "^6.0.1",
-    "git-url-parse": "^9.0.1",
-    "ignore": "^4.0.2",
+    "fs-extra": "^7.0.0",
+    "git-url-parse": "^10.0.1",
+    "ignore": "^5.0.2",
     "ini": "^1.3.5",
+    "luxon": "^1.3.3",
     "request": "^2.87.0",
-    "request-promise-native": "^1.0.5",
-    "semver": "^5.5.0",
-    "superagent": "^3.8.3"
+    "request-promise-native": "^1.0.5"
   },
   "bin": {
     "norman": "./norman.js"
