--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-norman",
-  "version": "2.0.25",
+  "version": "2.0.26",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "@types/fs-extra": "^5.0.4",
     "@types/ini": "^1.3.29",
     "@types/luxon": "^1.4.0",
+    "@types/minimatch": "~3.0.3",
     "@types/node": "^10.12.2",
     "@types/request": "^2.48.0",
     "@types/request-promise-native": "^1.0.15",
@@ -49,6 +50,7 @@
     "ignore": "^5.0.4",
     "ini": "^1.3.5",
     "luxon": "^1.4.5",
+    "minimatch": "~3.0.4",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
   },
