--- a/package.json
+++ b/package.json
@@ -25,27 +25,27 @@
   "devDependencies": {
     "@types/argparse": "^1.0.35",
     "@types/chalk": "^2.2.0",
-    "@types/chokidar": "^1.7.5",
+    "@types/chokidar": "~2.1.3",
     "@types/content-type": "^1.1.2",
     "@types/express": "^4.16.0",
-    "@types/fs-extra": "^5.0.4",
+    "@types/fs-extra": "~8.0.1",
     "@types/ini": "^1.3.29",
     "@types/luxon": "^1.4.0",
     "@types/minimatch": "~3.0.3",
-    "@types/node": "^10.12.2",
+    "@types/node": "~12.12.14",
     "@types/request": "^2.48.0",
     "@types/request-promise-native": "^1.0.15",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.6"
+    "typescript": "~3.7.3"
   },
   "dependencies": {
     "accept": "^3.1.3",
     "argparse": "^1.0.10",
-    "chalk": "^2.4.1",
-    "chokidar": "^2.0.4",
+    "chalk": "~3.0.0",
+    "chokidar": "~3.3.0",
     "content-type": "^1.0.4",
     "express": "^4.16.4",
-    "fs-extra": "^7.0.0",
+    "fs-extra": "~8.1.0",
     "git-url-parse": "^11.0.1",
     "ignore": "^5.0.4",
     "ini": "^1.3.5",
