--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "~12.12.14",
     "@types/request": "^2.48.0",
     "@types/request-promise-native": "^1.0.15",
+    "@types/ssri": "~6.0.1",
     "tslint": "^5.11.0",
     "typescript": "~3.7.3"
   },
@@ -52,7 +53,8 @@
     "luxon": "^1.4.5",
     "minimatch": "~3.0.4",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.5",
+    "ssri": "~7.1.0"
   },
   "bin": {
     "norman": "./norman.js"
