--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/argparse": "^1.0.35",
     "@types/chalk": "^2.2.0",
     "@types/chokidar": "~2.1.3",
+    "@types/columnify": "~1.5.0",
     "@types/content-type": "^1.1.2",
     "@types/express": "^4.16.0",
     "@types/fs-extra": "~8.0.1",
@@ -44,6 +45,7 @@
     "argparse": "^1.0.10",
     "chalk": "~3.0.0",
     "chokidar": "~3.3.0",
+    "columnify": "~1.5.4",
     "content-type": "^1.0.4",
     "express": "^4.16.4",
     "fs-extra": "~8.1.0",
