--- a/package.json
+++ b/package.json
@@ -25,41 +25,29 @@
   "devDependencies": {
     "@types/argparse": "~1.0.38",
     "@types/chalk": "^2.2.0",
-    "@types/chokidar": "~2.1.3",
     "@types/columnify": "~1.5.0",
-    "@types/content-type": "^1.1.2",
-    "@types/express": "^4.16.0",
     "@types/fs-extra": "~8.0.1",
     "@types/git-url-parse": "^9.0.0",
     "@types/ini": "^1.3.29",
-    "@types/luxon": "^1.4.0",
     "@types/minimatch": "~3.0.3",
     "@types/node": "~12.12.14",
     "@types/npm-packlist": "^1.1.1",
-    "@types/request": "^2.48.0",
-    "@types/request-promise-native": "^1.0.15",
-    "@types/ssri": "~6.0.1",
+    "@types/prompts": "~2.0.5",
     "tslint": "^5.11.0",
     "typescript": "~3.7.3"
   },
   "dependencies": {
-    "accept": "^3.1.3",
     "argparse": "^1.0.10",
     "chalk": "~3.0.0",
-    "chokidar": "~3.3.0",
     "columnify": "~1.5.4",
-    "content-type": "^1.0.4",
-    "express": "^4.16.4",
     "fs-extra": "~8.1.0",
     "git-url-parse": "^11.1.2",
     "ignore": "^5.0.4",
     "ini": "^1.3.5",
-    "luxon": "^1.4.5",
     "minimatch": "~3.0.4",
     "npm-packlist": "^2.1.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.5",
-    "ssri": "~7.1.0"
+    "prompts": "~2.3.2",
+    "verdaccio": "~4.5.1"
   },
   "bin": {
     "norman": "./norman.js"
