--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "module": "commonjs",
-    "target": "es6",
+    "target": "ES2017",
     "esModuleInterop": false,
     "noEmitOnError": true,
     "noImplicitReturns": true,
